# LeetCode-Progress-Tracker

./: README.md  README_en.md  README_ru.md  app.py  config.py  data_collector.py  leetcode_progress.csv  pyproject.toml  requirements.txt
locales/: en.json  ru.json
modules/: __init__.py  api_routes.py  chart_creator.py  data_processor.py  i18n.py  utils.py  web_views.py
static/css/: style.css
static/js/: app.js
templates/: error.html  index.html
