[project]
name = "leetcode-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
